# rust-practice

./: .gitignore  README.md  task.md
articurl/: Cargo.toml  README.md
articurl/src/: main.rs
artigrab/: Cargo.toml  README.md
artigrab/src/: main.rs
base64plain/b64_plain/: Cargo.toml
base64plain/b64_plain/src/: lib.rs  main.rs
fixed-xor/: Cargo.toml  README.md
fixed-xor/src/: main.rs
hextobase64/: Cargo.toml  README.md
hextobase64/src/: lib.rs  main.rs
sha256/: Cargo.toml  README.md
sha256/src/: main.rs
src/: main.rs
x509-alt-name-rust/: Cargo.toml  README.md
x509-alt-name-rust/src/: main.rs
x509-cn-rust/: Cargo.toml  README.md
x509-cn-rust/src/: main.rs
xapk-extractor/: .gitignore  Cargo.toml  README.md
xapk-extractor/src/: main.rs
