[package]
name = "articurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arti-client = "0.6.0"
clap = "3.1.12"
error-chain = "0.12.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3.24"
data-encoding = "2.3.0"