[package]
name = "sha256"
version = "0.1.0"
authors = ["Alexis Hancock <lxshancock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
data-encoding = "2.3.0"
ring = "0.16.15"
clap = "2.33.3"
