[package]
name = "xfiveohnine"
version = "0.1.0"
authors = ["Alexis Hancock <lxshancock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-parser = "0.8.2"
clap = "2.33.3"
dns-lookup = "1.0.5"
tracing = "0.1.37"
trust-dns-util = "0.22.0"
tokio = "1.22.0"
trust-dns-resolver = "0.22.0"
